--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,6 @@ dependencies = [
     "typing-extensions>=4.14.1",
     "flask>=3.0.0",
     "httpx>=0.28.1",
+    "plotly>=6.2.0",
+    "pandas>=2.3.1",
 ]
